# Practicas_PRO2_2025

./: .gitignore  CMakeLists.txt  README.md  main.c  rational_pointer.c  rational_pointer.h  rational_struct.c  rational_struct.h
P0/: CMakeLists.txt  main.c  rational_pointer.c  rational_pointer.h  rational_struct.c  rational_struct.h
P1/: CMakeLists.txt  dynamic_list.c  dynamic_list.h  main.c  static_list.c  static_list.h  types.h
Plantilla-Template_P2/: bid_stack.c  bid_stack.h  console_list.c  console_list.h  main  main.c  types.h
Plantilla-Template_P2/script_minimos/: award_output.txt  bid_output.txt  delete_output.txt  invalidate_output.txt  new_output.txt  remove_output.txt
